--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <a href="https://namedvariable.github.io/twine/Something small..html"> Something Small (wip)</a>
+<a href="https://namedvariable.github.io/twine/The Lab.html"> The Lab (very wip)</a>
